(lang dune 3.10)

(name 99_ocaml_problems)

(generate_opam_files true)

(source
 (github Muream/99-ocaml-problems))

(authors "Loïc Pinsard")

(maintainers "Loïc Pinsard")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name 99_ocaml_problems)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (allow_empty)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
